--- a/web/style.css
+++ b/web/style.css
@@ -1,20 +1,39 @@
 div.a {
   text-align: center;
-  font-family: "Verdana";
-  background-color:#003B70;
+  font-family: 'Montserrat', sans-serif;
+  background-color:#badaff;
   width: 100%;
-  margin: 0px;
-  padding: 0px;
+  /* height: 100%; */
+  margin: 0;
+  padding-right: 0;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
-div.b {
-  text-align: left;
+canvas {
+  text-align: center;
+  margin: auto; 
+  margin-top: 25%;
+  margin-bottom: 25%;
+  border: 3px solid green;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
-div.c {
-  text-align: right;
-} 
+p {
+  text-align: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 170%;
+  font-family: 'Montserrat', sans-serif;
+}
 
-div.d {
-  text-align: justify;
-} 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+html, body{
+  height: 100%;
+}
